Fix form spacing;

--- a/css/wpdtrt-forms.css
+++ b/css/wpdtrt-forms.css
@@ -32,10 +32,14 @@
   margin-left: 0;
 }
 
+.wpdtrt-forms-field {
+  margin-bottom: .3em;
+}
+
 .wpdtrt-forms-label {
   display: block;
   cursor: pointer;
-  margin-bottom: .2em;
+  margin-bottom: .35em;
 }
 
 .wpdtrt-forms-field > * {
@@ -107,7 +111,7 @@
 
 .wpdtrt-forms-field > input[type="checkbox"] {
   float: left;
-  margin-top: .4em;
+  margin-top: .2em;
 }
 
 .wpdtrt-forms-field > input[type="checkbox"] + .wpdtrt-forms-label {
